add meta for test

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cinema</title>
+    <title>Yar Otzovik</title>
+    <meta property="og:title" content="Yar Otzovik - Your Movie Reviews" />
+    <meta property="og:description" content="Explore movies and share your reviews!" />
+    <meta property="og:image" content="https://i.pinimg.com/736x/7a/6f/aa/7a6faa895c3d2e4f18613b01d3325a90.jpg" />
+    <meta property="og:url" content="https://yar-otzovik.vercel.app" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
